<resources>
    <string name="app_name">wikigame</string>

    <string name="error_tap_to_repeat">Error. Tap here to retry</string>
    <string name="nothing_found">Nothing found.</string>

    <string name="btn_play">Play</string>
    <string name="start">Start</string>
    <string name="error_external_link">That\'s not a wiki link.</string>
    <string name="points">%d Points</string>
    <string name="level_statistics">Level %d</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_statistics">Statistics</string>
    <string name="btn_rate_app">Rate in Google Play</string>
    <string name="level">Level</string>
    <string name="btn_history">History</string>
    <string name="clicks_total">Clicks total: %d</string>
    <string name="time_total">Total time played: %s</string>
    <string name="btn_play_again">Play again</string>
    <string name="main_menu">Main menu</string>
    <string name="font_size">Wiki font size</string>
    <string name="reset">Reset and Clear history</string>
    <string name="pref_sounds">Play sounds</string>
    <string name="font_normal">Normal</string>
    <string name="font_large">Large</string>
    <string name="reset_score_alert">Do you really wish to clear all statistics and game history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="score_reset_successful">Game history has been reset</string>
    <string name="resume_game">Resume Game</string>
    <string name="time">Time</string>
    <string name="clicks">Clicks</string>
    <string name="target_phrase">Target phrase</string>
    <string name="start_phrase">Start phrase</string>

    <plurals name="clicks">
        <item quantity="one">%d Click</item>
        <item quantity="other">%d Clicks</item>
    </plurals>
</resources>
