<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ua.boberproduction.wikigame.mvvm.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statistics_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/info_window_background"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@id/pref_reset_score"
            app:layout_constraintTop_toTopOf="@id/pref_font_size_label">

            <TextView
                android:id="@+id/pref_font_size_label"
                style="@style/AppTheme.SettingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                app:layout_constraintBottom_toBottomOf="@id/font_size_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/font_size_switch" />

            <com.github.angads25.toggle.widget.LabeledSwitch
                android:id="@+id/font_size_switch"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:on="true"
                app:textOff="@string/font_normal"
                app:textOn="@string/font_large" />

            <TextView
                android:id="@+id/pref_sounds_label"
                style="@style/AppTheme.SettingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pref_sounds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pref_font_size_label" />

            <com.github.angads25.toggle.widget.LabeledSwitch
                android:id="@+id/mute_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/pref_sounds_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/pref_sounds_label"
                app:on="true" />

            <TextView
                android:id="@+id/pref_reset_score"
                style="@style/AppTheme.SettingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_bkg_red"
                android:drawableStart="@drawable/ic_cross"
                android:drawablePadding="8dp"
                android:padding="6dp"
                android:paddingEnd="16dp"
                android:onClick="@{() -> viewModel.resetScoreClicked()}"
                android:text="@string/reset"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pref_sounds_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>