<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ua.boberproduction.wikigame.mvvm.menu.MainMenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_play"
            style="@style/MenuButton"
            android:drawableStart="@drawable/ic_play_arrow"
            android:onClick="@{(v) -> viewModel.playBtnClicked()}"
            android:text="@string/btn_play"
            app:layout_constraintBottom_toTopOf="@id/btn_leaderboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_leaderboard"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_leaderboards"
            android:onClick="@{(v) -> viewModel.playBtnClicked()}"
            android:text="@string/btn_leaderboards"
            app:layout_constraintBottom_toTopOf="@id/btn_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_play" />

        <Button
            android:id="@+id/btn_settings"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_settings"
            android:onClick="@{(v) -> viewModel.playBtnClicked()}"
            android:text="@string/btn_settings"
            app:layout_constraintBottom_toTopOf="@+id/btn_rate_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_leaderboard" />

        <Button
            android:id="@+id/btn_rate_app"
            style="@style/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_star"
            android:onClick="@{(v) -> viewModel.playBtnClicked()}"
            android:text="@string/btn_rate_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>