<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ua.boberproduction.wikigame.mvvm.postgame.ResultsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimary">

        <TextView
            android:id="@+id/level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/level"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/level_circular_view"
            app:layout_constraintEnd_toEndOf="@id/level_circular_view"
            app:layout_constraintStart_toStartOf="@id/level_circular_view" />

        <ua.boberproduction.wikigame.util.views.CircularLevelView
            android:id="@+id/level_circular_view"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:cpv_autoTextColor="true"
            app:cpv_autoTextSize="true"
            app:cpv_barColor="@color/white"
            app:cpv_barWidth="16dp"
            app:cpv_innerContourSize="0dp"
            app:cpv_outerContourColor="@color/white"
            app:cpv_outerContourSize="0dp"
            app:cpv_rimColor="@color/colorPrimaryDark"
            app:cpv_rimWidth="16dp"
            app:cpv_text="3"
            app:cpv_textColor="@color/white"
            app:cpv_textMode="Text"
            app:layout_constraintBottom_toTopOf="@id/points_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:cpv_value="30" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/points_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/clicks_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:ticker_animationDuration="1500"
            app:ticker_defaultCharacterList="number"
            tools:text="5200 points" />

        <TextView
            android:id="@+id/clicks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@plurals/clicks(viewModel.clicks, viewModel.clicks)}"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/points_tv"
            tools:text="12 Clicks" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.time}"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clicks_count"
            tools:text="02:44" />

        <Button
            android:id="@+id/btn_main_menu"
            style="@style/MenuButton"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_menu_dark"
            android:onClick="@{(v) -> viewModel.menuBtnClicked()}"
            android:text="@string/main_menu"
            app:layout_constraintBottom_toTopOf="@id/btn_play_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_play_again"
            style="@style/MenuButton"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_play_again"
            android:onClick="@{(v) -> viewModel.playAgainBtnClicked()}"
            android:text="@string/btn_play_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>